# triplehop_backend

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_min.txt
app/: config.ini.py  db.py  exceptions.py  main.py  utils.py
app/api/: entity.py  v1.py
app/auth/: core.py  models.py  permission.py
app/authentication/: BasicAuth.py
app/cache/: core.py
app/cmd/: elasticsearch_reindex.py
app/db/: auth.py  base.py  config.py  core.py  data.py  entity.py  job.py  permission.py  revision.py  user.py
app/es/: base.py  core.py  job.py
app/graphql/: base.py  entity.py  v1.py
app/graphql/config/: v1.py
app/graphql/data/: v1.py
app/mgmt/: auth.py  config.py  data.py  es.py  job.py  revision.py
app/models/: auth.py  es.py  job.py
app/router/: authentication.py
app/router/auth/: v1.py
app/router/config/: v1.py
app/router/data/: v1.py
app/router/es/: v1.py
app/router/job/: v1.py
data/: extract_directors.py
scripts/: cinecos_preprocess.py  db_antwerp_toponyms.py  db_app.py  db_cinecos.py  db_user_data.py  generate_relation_config.py  init.sh  process_config.py  test_apache_age.py  test_apache_age_asyncpg.py  utils.py
scripts/config/cinecos/entity/: address.json  city.json  company.json  company_name.json  continent.json  country.json  film.json  mentioned_film_title.json  person.json  programme.json  programme_date.json  programme_item.json  venue.json
scripts/config/cinecos/relation/: address_city.json  (+10 more)
scripts/human_readable_config/cinecos/: relations.json
scripts/nodejs/: index.ts  package-lock.json  package.json
(+24 files in other folders)
