[tool.poetry]
name = "triplehop_backend"
version = "0.1.0"
description = ""
authors = ["GhentCDH"]

[tool.poetry.dependencies]
python = "^3.7"
aiocache = {extras = ["msgpack", "ujson"], version = "^0.11.1"}
aiodataloader = "^0.2.1"
ariadne = "^0.15.1"
asyncpg = "^0.26.0"
bcrypt = "^3.2.2"
buildpg = "^0.4"
dictdiffer = "^0.9.0"
edtf = "^4.0.1"
elasticsearch = {version = "^7.0.0", extras = ["async"]}
fastapi = "^0.78.0"
fastapi-jwt-auth = "^0.5.0"
gunicorn = "^20.1.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
roman = "^3.3"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
